--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
             </div>
         </div>
     </header>
+    <!-- Fondo de partículas -->
+    <div id="particles-js"></div>
 
     <!-- Sección Quiénes Somos -->
     <section id="quienes" class="container my-5">
@@ -117,7 +119,7 @@
             </div>
         </div>
     </section>
-
+    
     <!-- Botón flotante de WhatsApp -->
     <a href="https://wa.me/549123456789" class="whatsapp-btn" target="_blank">
         <i class="fab fa-whatsapp"></i>
@@ -126,9 +128,13 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="js/script.js"></script>
+    <script src="js/nav.js"></script>
+    <script src="js/particulas.js"></script>
+   
 
 </body>
 </html>
