--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="carousel-caption">
                     <h1 class="typed-text"></h1>
                     <p>Soluciones digitales para tu negocio</p>
-                    <a href="#servicios" class="btn btn-primary">Conocer más</a>
+                    
                 </div>
             </div>
             <div class="carousel-item">
@@ -73,25 +73,25 @@
         <div class="row">
             <div class="col-md-4" data-aos="zoom-in">
                 <div class="card">
-                    <img src="servicio1.jpg" class="card-img-top" alt="Servicio 1">
+                    <img src="img/ecommerce-1.jpg" class="card-img-top" alt="Servicio 1">
                     <div class="card-body">
-                        <h5 class="card-title">Diseño Web</h5>
+                        <h5 class="card-title">Tu tienda</h5>
                         <p class="card-text">Creamos sitios web modernos y responsivos.</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4" data-aos="zoom-in" data-aos-delay="200">
                 <div class="card">
-                    <img src="servicio2.jpg" class="card-img-top" alt="Servicio 2">
+                    <img src="img/sitioweb.webp" class="card-img-top" alt="Servicio 2">
                     <div class="card-body">
-                        <h5 class="card-title">Marketing Digital</h5>
+                        <h5 class="card-title">Tu sitio web oficial</h5>
                         <p class="card-text">Estrategias digitales para hacer crecer tu negocio.</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4" data-aos="zoom-in" data-aos-delay="400">
                 <div class="card">
-                    <img src="servicio3.jpg" class="card-img-top" alt="Servicio 3">
+                    <img src="img/software.png" class="card-img-top" alt="Servicio 3">
                     <div class="card-body">
                         <h5 class="card-title">SEO y SEM</h5>
                         <p class="card-text">Mejoramos tu visibilidad en buscadores.</p>
@@ -121,7 +121,7 @@
     </section>
     
     <!-- Botón flotante de WhatsApp -->
-    <a href="https://wa.me/549123456789" class="whatsapp-btn" target="_blank">
+    <a href="https://wa.me/5491122949729" class="whatsapp-btn" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
 
