--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="#quienes">Quiénes Somos</a></li>
                     <li class="nav-item"><a class="nav-link" href="#servicios">Servicios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#testimonios">Testimonios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#apoyo">Apoyo</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
                 </ul>
             </div>
@@ -64,7 +64,7 @@
     <!-- Sección Quiénes Somos -->
     <section id="quienes" class="container my-5">
         <h2 class="text-center" data-aos="fade-up">Quiénes Somos</h2>
-        <p class="text-center" data-aos="fade-up">Somos un equipo de expertos en tecnología dedicados a transformar negocios con soluciones innovadoras.</p>
+        <p class="text-center" data-aos="fade-up">En MaGoz Soluciones IT nos especializamos en el desarrollo de sitios web y soluciones de software a medida, adaptadas a las necesidades específicas de cada cliente. Brindamos servicios integrales que combinan diseño, funcionalidad y tecnología, ayudando a empresas y emprendimientos a digitalizar sus procesos, optimizar su presencia online y potenciar su crecimiento. Nos enfocamos en ofrecer productos eficientes, escalables y con una experiencia de usuario de calidad, acompañando a nuestros clientes en cada etapa del proyecto.</p>
     </section>
 
     <!-- Sección Servicios -->
@@ -102,8 +102,8 @@
     </section>
 
     <!-- Sección Testimonios -->
-    <section id="testimonios" class="container my-5">
-        <h2 class="text-center" data-aos="fade-up">Testimonios</h2>
+    <section id="apoyo" class="container my-5">
+        <h2 class="text-center" data-aos="fade-up">Apoyo</h2>
         <div class="row">
             <div class="col-md-6" data-aos="fade-right">
                 <blockquote class="blockquote">
